# data-engineering-zoomcamp

./: .gitignore  .gitmodules  Makefile  pyproject.toml
01-docker-terraform/1_terraform_gcp/: notes.md
01-docker-terraform/1_terraform_gcp/terraform/terraform_basic/: main.tf
01-docker-terraform/1_terraform_gcp/terraform/terraform_with_variables/: variables.tf
01-docker-terraform/2_docker_sql/: Dockerfile  data-loading-parquet.ipynb  docker-compose.yaml  download-data.sh  ingest_data.py  note.md  pg-test-connection.ipynb
03-data-warehouse/: big_query.sql  big_query_ml.sql
05-batch/code/: 09_spark_gcs.ipynb  cloud.md
