[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Wisaroot Lertthaweedech <l.wisaroot@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
black = { version = "*", extras = ["jupyter"] }
isort = "*"
ipykernel = "*"
ruff = "*"
mypy = "*"
pandas = "*"
numpy = "*"
pgcli = "*"
jupyter = "*"
pyarrow = "*"
SQLAlchemy = "*"
psycopg2 = "*"
# mage-ai = "*" # conflict with dlt.
dlt = {version = "*", extras = ["duckdb", "parquet"]}
parquet = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
